# jugaadlang

./: .gitignore  .htmlvalidate.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  namaste.jug  pyproject.toml  run.sh  run_website.sh  update_version.sh
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autolabler.yml  ci.yml  issue-create-automate-message.yml  pr-create-automate-message.yml  publish-binaries.yml  release.yml  vscode-extension.yml
docker/: Dockerfile  docker-compose.yml
docs/: Specs.md  api.md  architecture.md  cli.md  contributing.md  grammar.ebnf  keywords.md  spec.md  stdlib.md
examples/: 01_namaste_duniya.jug  02_variables.jug  03_conditions.jug  04_loops.jug  05_functions.jug  06_oop.jug  07_errors.jug  08_async.jug  09_orm.jug  10_web.jug  11_chai_example.jug  list.jug
jug_cli/: __init__.py  main.py
jugaadlang/: __init__.py
jugaadlang/ast_nodes/: __init__.py  nodes.py
jugaadlang/errors/: __init__.py  messages.py
jugaadlang/events/: __init__.py  bus.py
jugaadlang/lexer/: __init__.py  lexer.py  tokens.py
jugaadlang/package_manager/: __init__.py  manager.py
jugaadlang/parser/: __init__.py  parser.py
jugaadlang/repl/: __init__.py  repl.py
jugaadlang/runtime/: __init__.py  fun_builtins.py  interpreter.py
jugaadlang/stdlib/: __init__.py  catfacts.py  chai.py  crypto.py  crypto_module.py  database.py  dev.py  faili.py  fortune.py  ganit.py  jokes.py  json.py  love.py  memes.py  motivation.py  samay.py  student.py  tantra.py  web.py  whatsapp.py
scratch/: basic_example.jug  demo_funny.jug  demo_type.jug  test_ast.py  test_ast_messages.py  test_bug.jug  test_builtins.jug  test_format.py  test_idx.py  test_import.jug  type_test.jug
scripts/: jug_entry.py  jugaadlang.iss  jugaadlang.json
tests/: test_errors.py  test_events.py  test_lexer.py  test_parser.py  test_runtime.py  test_stdlib.py  test_transformer.py
vscode_extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  jugaadlang-1.0.0.vsix  jugaadlang-1.0.1.vsix  jugaadlang-1.0.2.vsix  jugaadlang-1.0.3.vsix  jugaadlang-1.1.0.vsix  jugaadlang-1.1.4.vsix  jugaadlang-1.1.5.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
website/: 404.html  index.html  style.css
(+8 files in other folders)
