[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jugaadlang"
version = "1.0.0"
description = "JugaadLang — A Hindi-keyword programming language for Indian developers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "JugaadLang Community", email = "jugaadlang@gmail.com"}]
keywords = ["programming-language", "hindi", "compiler", "transpiler", "jugaad", "indian"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0",
    "pygments>=2.17",
    "rich>=13.0",
    "click>=8.1",
    "requests>=2.31",
]

[project.optional-dependencies]
web = ["httpx>=0.27", "aiohttp>=3.9", "flask>=3.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "mypy>=1.6",
    "ruff>=0.1",
]
all = ["jugaadlang[web,dev]"]

[project.scripts]
jug = "jug_cli.main:main"

[project.urls]
Homepage = "https://jugaadlang.dev"
Repository = "https://github.com/jugaadlang/jugaadlang"
Documentation = "https://docs.jugaadlang.dev"
"Bug Tracker" = "https://github.com/jugaadlang/jugaadlang/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jugaadlang*", "jug_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["jugaadlang"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
